# cvmfs-publisher

./: .gitignore  Prove_di_Carico_S3_bucket.py  README.md  cvmfs_repo_consumers.py  cvmfs_repo_sync.py  my_consumers.py  my_consumers_parameters.json  my_cvmfs_repo_sync.py  user_configure_bucket.py
docker/: README.md  docker-compose.yaml  pyproject.toml
docker/cvmfs-repo-consumers/: Dockerfile
docker/cvmfs-repo-consumers/src/: entrypoint.sh  parameters.json  requirements.txt
docker/cvmfs-repo-consumers/src/certs/: client_rabbitmq_key.pem
docker/cvmfs-repo-sync/src/: entrypoint.sh  parameters.json  requirements.txt
docker/jenkins/: docker-repo-consumers.Jenkinsfile  docker-sync-publisher.Jenkinsfile
docker/publisher-consumer/: Dockerfile
docker/publisher-consumer/src/: entrypoint.sh  parameters.json  requirements.txt
docker/src/: cvmfs_repo_consumers.py  cvmfs_repo_sync.py  entrypoint.sh  parameters.json  publisher_consumer.py
docker/src/certs/: ca_certificate.pem
docker/sync-publisher/: Dockerfile
docker/sync-publisher/src/: entrypoint.sh
docker/sync-publisher/src/certs/: client_rabbitmq_certificate.pem
jenkins/: docker-repo-consumers.Jenkinsfile  docker-sync-publisher.Jenkinsfile
scripts/: S3_bucket_Load_Tests.py  configuration-publisher.cfg  configure_buckets.py  create_topic.py  cvmfs_repo_agent.py  cvmfs_repo_consumers.py  cvmfs_repo_sync.py  docker_cleaner.py  example.cvmfs_repo_agent_params.json  example.sync_repo_params.json  parameters.json  publisher_consumer.py  sync_repo.py  sync_repo_params.json  user_configure_bucket.py
(+5 files in other folders)
