[tool.poetry]
name = "cvmfs_publisher"
version = "0.1.0"
description = "CVMFS publisher and syncronization scripts for CVMFS repositories"
authors = ["Francesca Del Corso"]
license = "Open"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
boto3 = "^1.38.41"
pika = "^1.3.2"
hvac = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
